--- a/village.html
+++ b/village.html
@@ -18,7 +18,7 @@
 <!-- Navbar (sit on top) -->
 <div class="w3-top">
   <div class="w3-bar w3-white w3-padding w3-card w3-light-grey" style="letter-spacing:4px;">
-	<a href="index.html" class="w3-bar-item w3-button w3-wide"><img src="image/LA28logo.png" alt="logo LA28"  width=50 height=70 /></a>
+	<a href="index.html" class="w3-bar-item w3-button w3-wide">Accueil</a>   <!--<img src="image/LA28logo.png" alt="logo LA28"  width=50 height=70 />-->
     <!-- Right-sided navbar links. Hide them on small screens -->
     <div class="w3-right w3-hide-small">
       <a href="Infra.html" class="w3-bar-item w3-button">Infrastructures</a>
