--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <div class="w3-right w3-hide-small">
       <a href="#Infra" class="w3-bar-item w3-button">Infrastructures</a>
       <a href="#epreuve" class="w3-bar-item w3-button">Epreuves</a>
-      <a href="#illage" class="w3-bar-item w3-button">Village</a>
+      <a href="#village" class="w3-bar-item w3-button">Village</a>
 	  <a href="#perenne" class="w3-bar-item w3-button">Réalisation pérennes</a>
 	  <a href="#transport" class="w3-bar-item w3-button">Transports</a>
 	  <a href="#impact" class="w3-bar-item w3-button">Impacts</a>
