--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
   <!-- Instalation perenne Section -->
   <div class="w3-row w3-padding-64" id="perenne">
     <div class="w3-col l6 w3-padding-large">
-      <h1 class="w3-center">Les Instalations pérennes</h1><br>
+      <h1 class="w3-center">Les Réalisations pérennes</h1><br>
       <p >L’objectif est de transformer le centre aquatique de Saint-Denis qui a été le site de compétition des épreuves de water-polo,de plongeonet de natation artistique en 
 		<br>une zone d’activités multisports comprenant:
 		<a href="perenne.html" class="w3-bar-item w3-button w3-text-grey"><i>lire la suite</i></a></p><br>
