--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
     <!-- impactSection -->
   <div class="w3-row w3-padding-64" id="impact">
     <div class="w3-col l6 w3-padding-large">
-      <h1 class="w3-center">L'impact sur les habitants</h1><br>
+      <h1 class="w3-center">Les impacts sur les habitants</h1><br>
       <p >Les Jeux Olympiques de Paris 2024 ont été perçus comme une opportunité majeure pour améliorer la qualité de vie des habitants,<br>
  grâce à plusieurs bénéfices mis en avant par les élus<a href="impact.html" class="w3-bar-item w3-button w3-text-grey"><i>lire la suite</i></a></p><br>
     </div>
