--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
     </div>
 
     <div class="w3-col m6 w3-padding-large">
-      <h1 class="w3-center">Les transport et leur futur</h1><br>
+      <h1 class="w3-center">Les transports et leur futur</h1><br>
       <p class="w3-large">Les Jeux Olympiques et Paralympiques de Paris 2024 ont misé sur une mobilité durable et innovante pour <br>minimiser leur empreinte carbone et encourager des déplacements écologiques.
 	  <a href="transport.html" class="w3-bar-item w3-button w3-text-grey"><i>lire la suite</i></a> </p>
 	  </div>
